tests/typechecking/invalid/array_bad_type_argument_creation.ml
let t= Array.create 3.3 1 in t